fix overflow

--- a/this-side-up/frontend/src/Homepage.css
+++ b/this-side-up/frontend/src/Homepage.css
@@ -7,6 +7,7 @@ html {
   font-family: 'Inter', sans-serif;
   color: #110f0f;
   background: #F8FAF5;
+  overflow: hidden;
 }
 
 
@@ -18,6 +19,7 @@ html {
   width: 100%;
   top: 15%;
   z-index: 0;
+  overflow: hidden;
 }
 
 .board-img {
@@ -37,6 +39,7 @@ html {
   position: absolute;
   width: 100%;
   z-index: 10;
+  overflow: hidden;
 }
 
 .board-img2 {
@@ -53,6 +56,7 @@ html {
   position: absolute;
   width: 100%;
   z-index: 10;
+  overflow: hidden;
 }
 
 .board-img3 {
